Starting nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,26 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  background-color: #282c34;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.Navigation {
+  display: flex;
+  flex-direction: row;
+}
+
+.Nav-link {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
 }
 
 @keyframes App-logo-spin {
