--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .App-logo {
@@ -34,6 +35,15 @@
   justify-content: space-around;
   align-items: center;
   padding: 1rem;
+  font-size: 1rem;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.last {
+  color: #bfbfbf;
+  font-size: 0.8rem;
+  justify-content: right;
 }
 
 @keyframes App-logo-spin {
