--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -1,15 +1,38 @@
 .intro {
+    display: flex;
+    flex-direction: column;
     text-align: left;
     background-color: rgb(185, 225, 255);
     border-radius: 50px;
     padding: 1rem 2.5rem;
+    max-width: 900px; 
+    margin-top: 1rem;
 }
 
-.availability {
+.intro-subtitle {
+    /* text-indent: 2rem; */
+    margin: 0;
+}
+
+.intro-text {
+    font-size: 1.15rem;
+}
+
+.about-button {
+    background-color: blueviolet;
+    color: rgb(255, 225, 255);
+    text-decoration: none;
+    padding: .5rem 1rem;
+    border-radius: 15px;
     display: flex;
     align-items: center;
+    align-self: center;
 }
 
-.location-icon {
-    margin-right: .5vw;
+.about-button span {
+    margin-right: .2rem;
+}
+
+.about-button:hover {
+    transform: scale(1.1, 1.1);
 }
