--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -2,6 +2,9 @@
     list-style-type: none;
     margin: 0px;
     padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .proj-item {
@@ -14,6 +17,11 @@
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: fit-content;
+    min-width: 400px;
+}
+
+.proj-list :last-child > div {
+    margin-bottom: 0;
 }
 
 .proj-heading {
@@ -21,6 +29,7 @@
     align-items: center;
     justify-content: space-between;
     max-width: 60%;
+    margin-right: 4vw;
 }
 
 .proj-title {
@@ -43,7 +52,7 @@
 }
 
 .under {
-    margin-left: 2vw;
+    margin: 0 4vw 0 1.5vw;
     background-color: rgb(174, 232, 218);
     border-radius: 25px;
     padding: .25rem 1rem;
