--- a/src/Components/Socials.css
+++ b/src/Components/Socials.css
@@ -1,6 +1,8 @@
 .icon {
-    height: 5vmin;
-    width: 5vmin;
+    height: 5vw;
+    min-height: 35px;
+    max-height: 45px;
+    width: auto;
     border: transparent solid 2px;
 }
 
@@ -10,8 +12,8 @@
 
 .wide {
     justify-content: space-between;
-    width: 25vw;
-    max-width: 200px;
+    width: 35vw;
+    max-width: 220px;
 }
 
 .dropdown {
@@ -23,6 +25,10 @@
     border-radius: 0 0 5px 5px;
     padding: .5rem .25rem;
     translate: -5px;
+}
+
+.socials > a {
+    margin: .1rem 0;
 }
 
 .github {
