--- a/src/Components/Tech.css
+++ b/src/Components/Tech.css
@@ -1,42 +1,23 @@
 .TechStack {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
-.list {
-    list-style-type: none;
-    display: flex;
+.TechStack .list {
     padding: .6rem;
-    margin-right: .5rem;
-    border-radius: 30px;
+    margin: 0 .25rem .5rem 0;
 }
 
-.list:last-of-type {
-    margin: 0rem;
+.TechStack .list:last-of-type {
+    margin-right: 0;
 }
 
-.item {
-    display: flex;
-    padding-right: calc(.25rem + .5vw);
-    align-items: center;
+.TechStack .item:last-of-type {
+    margin-right: 0;
 }
 
-.item:last-of-type {
-    padding: 0px;
-}
-
-.langs {
-    background-color: rgb(175, 240, 175);
-}
-
-.dbs {
-    background-color: rgb(240, 225, 150);
-}
-
-.libs {
-    background-color: rgb(180, 180, 240);
-}
-
-.tools {
-    background-color: rgb(240, 175, 200);
+@media only screen and (min-width: 600px) {
+    .TechStack .list {
+        margin-right: .6rem;
+    }
 }
