--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 .App {
   text-align: center;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  display: flex;
-  flex-direction: column;
-  min-height: 100%;
+  height: 100%;
   overflow-x: clip;
 }
 
@@ -14,6 +12,7 @@
   border-radius: 0 1rem 1rem 0; 
   padding: 0 .5rem;
   position: fixed;
+  z-index: 2;
   top: 8.5rem;
   left: 0%;
   background-color: lightcyan;
@@ -47,6 +46,36 @@
   padding: 5vh 5vw;
 }
 
+.dim-check {
+  color: white;
+  padding: 5vh 10vw;
+  min-height: 100%;
+}
+
+.app-container {
+  display: none;
+}
+
+.mobile-warn {
+  position: absolute;
+  top: 6vh;
+  background-color: darkblue;
+  font-size: 1.4rem;
+  padding: 1.2rem;
+  border-radius: 2rem;
+  max-width: 70%;
+  line-break: normal;
+}
+
+.dim-warn {
+  padding: 1.2rem 1.2rem;
+  background-color: darkslateblue;
+  color: rgb(225, 220, 255);
+  line-height: 1.4;
+  border-radius: 1rem;
+  margin: 2rem;
+}
+
 .hoverable {
   border-radius: .4rem;
   background-color: rgba(172, 124, 255, 0.5);
@@ -55,7 +84,7 @@
 }
 
 .link {
-  color: mediumblue;
+  color: rgb(55, 55, 255);
   text-decoration: none;
 }
 
@@ -104,9 +133,21 @@
   background-color: rgb(240, 175, 200);
 }
 
-
 @media screen and (max-width: 600px) {
-  .projects {
+  .projects.page {
       padding: 5vh 2vw;
+  }
+
+}
+
+@media screen and (min-width: 500px) {
+  .dim-check {
+    display: none;
+  }
+
+  .app-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
   }
 }
