add auto width to images

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -12,6 +12,7 @@
   
 .App-logo {
     height: 10vmin;
+    width: auto;
     min-height: 60px;
     pointer-events: none;
 }
@@ -69,6 +70,7 @@
 .mini-headshot {
     height: 8vmin;
     min-height: 45px;
+    width: auto;
     border-radius: 50%;
 }
 
