fixed contact form

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -31,15 +31,15 @@ label {
 }
 
 button {
-    display:flex;
-    align-self: flex-end;
-    border: 0px;
+    border: 0;
     border-radius: 1.7rem;
     background-color: #6821ff;
-    padding: calc(.4rem + 1vmin) calc(1rem + 3vmin);
+    padding: 1rem 1.6rem;
+    margin-left: 1rem;
+    min-width: max-content;
     font-size: 1.2rem;
     font-weight: 800;
-    color: #e4d6ff;
+    color: #ddd6ff;
     cursor: pointer;
 }
 
@@ -54,7 +54,8 @@ button:hover {
 }
 
 .response {
-    max-width: 50%;
+    margin: 0 auto;
+    padding: .2rem .4rem;
 }
 
 .note {
