--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -2,18 +2,20 @@
     display: flex;
     position: -webkit-sticky; /* Safari */
     position: sticky;
+    min-height: 5rem;
     top: 0;
     z-index: 3;
     background-color: rgb(0, 15, 40);
-    align-items: stretch;
+    align-items: center;
     justify-content: space-evenly;
     color: white;
 }
   
 .App-logo {
-    height: 10vmin;
-    width: auto;
-    min-height: 60px;
+    width: 10vw;
+    min-width: 60px;
+    max-width: 80px;
+    height: auto;
     pointer-events: none;
 }
   
@@ -32,45 +34,49 @@
   }
 }
   
-.Navigation {
+.navigation {
     display: flex;
     align-items: center;
-    width: 70%;
     max-width: 600px;
     justify-content: space-evenly;
 }
+
+.App-header .navigation {
+  width: 70%;
+}
   
-.Nav-link {
-    padding: 1vmin 0;
+.nav-link {
+    padding: .5rem 0;
     margin: 0 .15rem;
     font-size: calc(.75rem + .5vmin);
     text-decoration: none;
     color: white;
 }
   
-.Nav-link.active {
+.nav-link.active {
     font-weight: 800;
-    transform: scale(1.15,1.15);
+    transform: scale(1.15, 1.15);
     margin: 0 .5rem;
 }
 
-.Nav-link.active:first-child {
+.nav-link.active:first-child {
     margin-left: 0;
 }
 
-.Nav-link.active:last-child {
+.nav-link.active:last-child {
     margin-right: 0;
 }
 
-.Nav-link:hover {
+.nav-link:hover {
   color: rgb(200, 235, 255);
   border-bottom: 2px currentColor solid;
 }
 
 .mini-headshot {
-    height: 8vmin;
-    min-height: 45px;
-    width: auto;
+    width: 8vw;
+    height: auto;
+    min-width: 45px;
+    max-width: 65px;
     border-radius: 50%;
 }
 
