--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -9,8 +9,11 @@
     margin-top: 1rem;
 }
 
+.intro-title {
+    font-size: 2.2rem;
+}
+
 .intro-subtitle {
-    /* text-indent: 2rem; */
     margin: 0;
 }
 
