--- a/src/Components/Tech.css
+++ b/src/Components/Tech.css
@@ -16,6 +16,15 @@
     margin-right: 0;
 }
 
+.tech-icon {
+    width: calc(1rem + 1.5vw);
+    max-width: 28px;
+    min-width: 20px;
+    height: calc(1rem + 1.5vw);
+    max-height: 28px;
+    min-height: 20px;
+}
+
 @media only screen and (min-width: 600px) {
     .TechStack .list {
         margin-right: .6rem;
