--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -8,12 +8,11 @@
 
 .footer-nav {
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
     align-items: center;
-    padding: 1rem;
+    padding: 1rem .4rem;
     text-decoration: none;
     color: rgb(100, 85, 45);
+    font-size: .9rem;
 }
 
 .footer-nav:hover {
