--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 .App {
   text-align: center;
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  height: auto;
   overflow-x: clip;
 }
 
@@ -13,18 +16,18 @@
   padding: 0 .5rem;
   position: fixed;
   z-index: 2;
-  top: 8.5rem;
+  top: 16vh;
   left: 0%;
   background-color: lightcyan;
   border: 2.5px solid mediumaquamarine;
   border-left: 0;
 }
 
-.availability span {
+#popup {
   display: none;
 }
 
-.availability:hover span {
+.availability:hover #popup {
   display: inline;
   min-width: 125px;
   margin-left: .4rem;
@@ -44,36 +47,6 @@
   background: linear-gradient(rgba(0, 10, 125, 0.85), transparent);
   background-color:rgb(140, 200, 255);
   padding: 5vh 5vw;
-}
-
-.dim-check {
-  color: white;
-  padding: 5vh 10vw;
-  height: 100%;
-}
-
-.app-container {
-  display: none;
-}
-
-.mobile-warn {
-  position: absolute;
-  top: 6vh;
-  background-color: darkblue;
-  font-size: 1.4rem;
-  padding: 1.2rem;
-  border-radius: 2rem;
-  max-width: 70%;
-  line-break: normal;
-}
-
-.dim-warn {
-  padding: 1.2rem 1.2rem;
-  background-color: darkslateblue;
-  color: rgb(225, 220, 255);
-  line-height: 1.4;
-  border-radius: 1rem;
-  margin: 2rem;
 }
 
 .hoverable {
@@ -138,18 +111,5 @@
 @media screen and (max-width: 600px) {
   .projects.page {
       padding: 5vh 2vw;
-  }
-
-}
-
-@media screen and (min-width: 500px) {
-  .dim-check {
-    display: none;
-  }
-
-  .app-container {
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
   }
 }
