minimal styling changes

--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -9,6 +9,7 @@
 
 .form-title {
     text-align: center;
+    margin-top: 0;
 }
 
 .field {
@@ -64,6 +65,6 @@ button:hover {
 
 textarea {
     resize: none;
-    font-family: 'MS Shell Dlg 2';
+    font-family: 'Arial';
     font-size: .85rem;
 }
