--- a/src/Components/Skills.css
+++ b/src/Components/Skills.css
@@ -1,15 +1,11 @@
-.skills > ul {
-    margin: 0 0 1rem;
-    padding: 0;
-}
-
 .SkillsList {
     display: flex;
     position: relative;
     z-index: 1;
     justify-content: center;
     flex-wrap: wrap;
-    min-width: 385px;
+    max-width: 410px;
+    margin-top: 1.8rem;
     padding: .25rem;
     border-radius: 20px;
     border: rgb(180, 180, 180) solid .5rem;
@@ -17,89 +13,102 @@
 }
 
 .tabs {
+    position: relative;
     display: flex;
-    justify-content: center;
-    list-style-type: none;
 }
 
-.proficiency {
-    padding: .4rem .8rem .3rem;
-    margin: 0 .2rem;
+.tab {
+    position: absolute;
+    padding: .4rem .6rem .2rem;
     border-radius: 10px 10px 0 0;
     font-weight: 600;
+    text-align: center;
+    width: 78px;
     cursor: pointer;
 }
 
-.proficiency:hover {
+.tab:hover {
+    padding-bottom: 2rem;
+    animation: tab-up ease-in 100ms forwards;
+}
+
+.tab.all:hover {
+    animation: none;
     transform: scale(1.1);
+}
+    
+  @keyframes tab-up {
+    from {
+        bottom: -3.5rem;
+    }
+    to {
+        bottom: -2rem;
+    }
+  }
+
+.tab.active {
+    z-index: 1;
 }
 
 .SkillsList .item {
     color: black;
     margin: .2rem;
     padding: .4rem .6rem;
+    border-radius: 30px;
 }
 
 .all .advanced {
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
+    margin-bottom: 0;
 }
 
 .all .moderate {
     border-radius: 0;
+    margin: 0;
 }
 
 .all .familiar {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+    margin-top: 0;
 }
 
-.proficiency.all {
+.tab.all {
     display: flex;
     justify-content: center;
     font-weight: 300;
     width: 1.5rem;
     background-color: rgb(185, 185, 185);
-    padding: .2rem .6rem;
+    padding: .15rem .6rem;
     margin: 0 0 .3rem .3rem;
     border-radius: 12px;
+    right: 7%;
 }
 
 .SkillsList.advanced {
     border-color: salmon;
 }
 
-.proficiency.advanced {
+.tab.advanced {
     background-color: salmon;
+    left: 7.5%;
 }
 
 .SkillsList.moderate {
     border-color: orange;
 }
 
-.proficiency.moderate {
+.tab.moderate {
     background-color: orange;
+    left: 25%;
 }
 
 .SkillsList.familiar {
     border-color: gold;
 }
 
-.proficiency.familiar {
+.tab.familiar {
     background-color: gold;
-}
-
-.skill {
-    padding: .15rem .4rem;
-    border-radius: .8rem;
-}
-
-@media only screen and (min-width:600px) {
-    .SkillsList {
-        width: 440px;
-    }
-
-    .proficiency.all {
-        margin-left: 1rem;
-    }
+    left: 42.5%;
 }
