fixed project repo positioning

--- a/src/Components/Projects.css
+++ b/src/Components/Projects.css
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
     padding: 3.5rem 6vw 3rem;
     margin-bottom: 50px;
     /* background image taken from https://svgsilh.com/image/1326174.html */
@@ -21,26 +22,19 @@
     margin-bottom: 0;
 }
 
-.proj-heading {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-right: 5vw;
-}
-
 .proj-title {
-    margin: .5rem;
+    margin: .5rem 5vw 0 0;
 }
 
 .proj-subheading {
     text-align: left;
     display: flex;
     align-items: center;
-    /* flex-wrap: wrap;
-    max-width: 65%; */ 
-    font-size: 1.15rem;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 65%;
     margin-right: 4vw;
-    font-size: .9rem;
+    /* font-size: .9rem; */
 }
 
 .proj-date {
@@ -51,7 +45,7 @@
 }
 
 .affiliation {
-    margin-left: 1.5vw;
+    margin: 1.5vw;
     background-color: rgb(174, 232, 218);
     border-radius: 25px;
     padding: .25rem .75rem .25rem .65rem;
@@ -91,9 +85,12 @@
     margin: 1rem 0rem;
 }
 
-.proj-repo {
-    display: flex;
-    align-items: center;
+.repo {
+    /* display: flex;
+    align-items: center; */
+    position: absolute;
+    left: 35%;
+    top: 7%;
 }
 
 .public {
