--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -15,7 +15,7 @@
 .field {
     display: flex;
     flex-direction: column;
-    margin-bottom: 1.5rem;
+    margin-bottom: calc(1rem + .5vh);
     text-align: left;
 }
 
