--- a/src/Pages/Projects.css
+++ b/src/Pages/Projects.css
@@ -37,7 +37,7 @@
 }
 
 .proj-date {
-    margin: 1.5vw;
+    margin: .5rem;
     background-color: powderblue;
     border-radius: 25px;
     padding: .25rem .6rem;
